--- a/ProyectoFinalArgProg/src/app/components/logo-ap/logo-ap.component.css
+++ b/ProyectoFinalArgProg/src/app/components/logo-ap/logo-ap.component.css
@@ -1,3 +1,34 @@
+.container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.redes{
+    margin-right: 7px;
+}
+
 #logoAP{
     width: 150px;
+}
+
+img {
+    width: 50px;
+}
+
+a {
+    margin:4px;
+}
+
+.btn{
+    border-width: 2px;
+}
+/*para la vista del celular*/
+.container{
+    flex-direction: column;
+}
+.redes{
+    display:flex;
+    flex-direction:column;
+    align-items: center;
 }
