--- a/ProyectoFinalArgProg/src/app/components/logo-ap/logo-ap.component.html
+++ b/ProyectoFinalArgProg/src/app/components/logo-ap/logo-ap.component.html
@@ -1,1 +1,17 @@
-<img src="../../../assets/APLogo.png" id="logoAP">
+<div class="row">
+    <div class="container">
+        <div class="logo">
+            <img src="../../../assets/APLogo.png" id="logoAP">
+        </div>
+        <div class="redes">
+            <a href="https://www.linkedin.com/in/santiago-lorenzini-2956591bb/"><img src="../../../assets/linkedin.png" id="linkedin"></a>
+            <a href="https://www.facebook.com/santi.lorenzini"><img src="../../../assets/facebook.png" id="facebook"></a>
+            <a href="https://www.instagram.com/santilorenzini/"><img src="../../../assets/instagram.png" id="instagram"></a>
+            <a href="https://twitter.com/lorenzinipha"><img src="../../../assets/twitter.png" id="twitter"></a>
+            <a href="https://github.com/SantiagoLorenzini"><img src="../../../assets/github.png" id="github"></a>
+            <button type="button" class="btn btn-outline-light">INGRESO</button>
+        </div>
+    </div>
+</div>
+
+
