estilización de la pagina

--- a/ProyectoFinalArgProg/src/app/components/educacion/educacion.component.html
+++ b/ProyectoFinalArgProg/src/app/components/educacion/educacion.component.html
@@ -1,28 +1,28 @@
 <div class="row">
-    <h1>Educación</h1>
-    <div class="col-lg-1"></div>
-    <div class="col-lg-11">
-        <ul>
-            <li><h1>Técnico Electromecánico-E.E.T.P. N°461</h1> - <h3>2013-2019</h3></li>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    <div class="title"><h1>Educación</h1></div>
+    
+        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4"  id="fot1"><img src="../../../assets/industrial.png" style="height: 190px;"></div>
+        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8" id="ed1"><h3>Técnico Electromecánico-E.E.T.P. N°461</h3><br><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Distinctio facilis nulla esse molestias eum laborum quod debitis 
                 reiciendis adipisci harum quibusdam recusandae r
                 epellat aspernatur corrupti illo voluptatibus impedit, optio totam.</p>
-        </ul>
-        <ul>
-            <li><h1>Ingeniería Industrial-Facultad de Ingeniería Química UNL</h1> - <h3>2020-actualidad</h3></li>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        </div>
+
+        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4"  id="fot2"><img src="../../../assets/logoFIQ_header260color.png" style="height: 120px;"></div>
+        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8" id="ed2"><h3>Ingeniería Industrial-Facultad de Ingeniería Química UNL</h3><br><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Distinctio facilis nulla esse molestias eum laborum quod debitis 
                 reiciendis adipisci harum quibusdam recusandae r
                 epellat aspernatur corrupti illo voluptatibus impedit, optio totam.</p>
-        </ul>
-        <ul>
-            <li><h1>Full Stack Developer Jr-Argentina Programa 4.0</h1> - <h3>2021-actualidad</h3></li>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        </div>
+        
+        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" id="fot3"><img src="../../../assets/APLogo.png" style="height: 120px; background-color: black; border-radius: 3%;"></div>
+        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8" id="ed3"><h3>Full Stack Developer Jr-Argentina Programa 4.0</h3> <br><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Distinctio facilis nulla esse molestias eum laborum quod debitis 
                 reiciendis adipisci harum quibusdam recusandae r
                 epellat aspernatur corrupti illo voluptatibus impedit, optio totam.</p>
-        </ul>
-    </div>
+        </div>
 </div>
+
+
+        
 
