--- a/ProyectoFinalArgProg/src/app/components/experiencia/experiencia.component.html
+++ b/ProyectoFinalArgProg/src/app/components/experiencia/experiencia.component.html
@@ -1,20 +1,33 @@
 <div class="row">
-    <h1>Experiencia Laboral</h1>
-    <div class="col-lg-1"></div>
-    <div class="col-lg-11">
-        <ul>
-            <li><h1>Atencion al cliente en negocio de pesca</h1>-<h3>2 años</h3></li>
+
+    <div class="exp"><h1>Experiencia Laboral</h1></div>
+
+        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4"><img src="../../../assets/aguar.PNG"></div>
+
+        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8" id="exp1"><h3>Atencion al cliente en negocio de pesca</h3><br><p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Distinctio facilis nulla esse molestias eum laborum quod debitis 
+                reiciendis adipisci harum quibusdam recusandae r
+                epellat aspernatur corrupti illo voluptatibus impedit, optio totam.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias sed quasi maiores dignissimos, 
+                obcaecati distinctio. Sit, itaque facilis, magnam laboriosam excepturi ullam, tenetur aut explicabo dolorum repudiandae a libero officiis!
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt neque eos tenetur. Sit, quam. 
+                Dignissimos doloribus perspiciatis inventore non corporis illo beatae nemo, delectus maxime quam molestiae! Officia, quibusdam at?
+            </p>
+        </div>
+        
+
+        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8" id="exp2"><h3>Apicultor</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Distinctio facilis nulla esse molestias eum laborum quod debitis 
                 reiciendis adipisci harum quibusdam recusandae r
-                epellat aspernatur corrupti illo voluptatibus impedit, optio totam.</p>
-        </ul>
-        <ul>
-            <li><h1>Apicultor</h1> -<h3>2020-actualidad</h3></li>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Distinctio facilis nulla esse molestias eum laborum quod debitis 
-                reiciendis adipisci harum quibusdam recusandae r
-                epellat aspernatur corrupti illo voluptatibus impedit, optio totam.</p>
-        </ul>
-    </div>
+                epellat aspernatur corrupti illo voluptatibus impedit, optio totam.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda unde possimus 
+                tempora? Eum quia veniam et nisi commodi velit nesciunt, accusantium ducimus quis obcaecati 
+                provident iure, aperiam vel excepturi eligendi? Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Eum blanditiis necessitatibus commodi. Deleniti commodi quo iste, blanditiis, voluptatem, dolor doloremque 
+                velit qui eius enim quibusdam aperiam eveniet delectus fuga culpa?
+            </p>
+        </div>
+        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" id="fot"><img src="../../../assets/Apicultor.jpg" style="height: 200px;"></div>
 </div>
+
