--- a/ProyectoFinalArgProg/src/app/components/acerca-de/acerca-de.component.css
+++ b/ProyectoFinalArgProg/src/app/components/acerca-de/acerca-de.component.css
@@ -1,23 +1,51 @@
 .row{
     padding: 20px;
+    border-radius:   50px;
+    justify-content: center;
+    
 }
 div{
     background-color: rgb(99, 203, 230);
     text-align: center;
+    justify-content: center;
 }
 /*etiqueta de nombre*/
 #nombre{  
+    display: flex;
     font-weight: bold;
+    height: 90px;
+    align-items: center;
+    justify-content: center;
 }
+
+#presentacion{
+    border: 2px solid rgb(22, 139, 148);
+    border-radius: 50px 50px 50px 50px;
+    background-color: azure;
+}
+
+#acerca{
+    border: 2px solid rgb(22, 139, 148);
+    border-radius: 50px 50px 50px 50px;
+    background-color: azure;
+    text-align:center;
+    margin-left: 10px; 
+    display: flex;
+    height: 190px;
+    align-items: center;
+    justify-content: center;
+}
+
+
 /*estilo de la foto, quiero que quede entre el banner y la pagina*/
 @media(min-width:200px) and (max-width:288px){
     #fotodeperfil{
         position:absolute;
         width: 30%;
         border-radius: 100%;
-        box-shadow: 3px 3px 3px grey;
+        border: 3px solid white;
         left: 35%;
-        top: 840px;
+        top: 800px;
         right: center;
     }
 }
@@ -27,7 +55,7 @@ div{
         position:absolute;
         width: 30%;
         border-radius: 100%;
-        box-shadow: 3px 3px 3px grey;
+        border: 3px solid white;
         left: 35%;
         top: 780px;
         right: center;
@@ -39,7 +67,7 @@ div{
         position:absolute;
         width: 30%;
         border-radius: 100%;
-        box-shadow: 3px 3px 3px black;
+        border: 3px solid white;
         left: 35%;
         top: 770px;
         right: center;
@@ -51,7 +79,7 @@ div{
         position:absolute;
         width: 30%;
         border-radius: 100%;
-        box-shadow: 3px 3px 3px black;
+        border: 3px solid white;
         left: 35%;
         top: 760px;
         right: center;
@@ -63,7 +91,7 @@ div{
         position:absolute;
         width: 30%;
         border-radius: 100%;
-        box-shadow: 3px 3px 3px black;
+        border: 3px solid white;
         left: 35%;
         top: 750px;
         right: center;
@@ -74,9 +102,9 @@ div{
         position:absolute;
         width: 30%;
         border-radius: 100%;
-        box-shadow: 3px 3px 3px grey;
+        border: 3px solid white;
         left: 35%;
-        top: 670px;
+        top: 720px;
         right: center;
     }
 }
@@ -86,20 +114,41 @@ div{
         position:absolute;
         width: 25%;
         border-radius: 100%;
-        box-shadow: 3px 3px 3px black;
+        border: 3px solid white;
         left:38%;
-        top: 660px;
+        top: 720px;
         right: center;  
         }
     }
 
-    @media(min-width:576px){
+    @media(min-width:576px) and (max-width:1000px){
         #fotodeperfil{
             position:absolute;
             width: 16%;
             border-radius: 100%;
-            box-shadow: 3px 3px 3px black;
+            border: 3px solid white;
             left: 20px;
             top: 730px;
+        }
+    }
+
+    @media(min-width:1000px) and (max-width:1500px){
+        #fotodeperfil{
+            position:absolute;
+            width: 16%;
+            border-radius: 100%;
+            border: 3px solid white;
+            left: 20px;
+            top: 700px;
+        }
+    }
+
+    @media(min-width:1500px){
+        #fotodeperfil{
+            position:absolute;
+            width: 190px;
+            border-radius: 100%;
+            left: 20px;
+            border: 3px solid white;
         }
     }
