--- a/ProyectoFinalArgProg/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoFinalArgProg/src/app/components/acerca-de/acerca-de.component.html
@@ -2,11 +2,11 @@
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
         <img src="../../../assets/fotoperfil.png" class="img-fluid" id="fotodeperfil">
     </div>
-    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2" id="presentacion">
         <h4 id="nombre">Santiago Lorenzini</h4>
-        <p>Full Stack Developer Jr</p>
+        <p>Estudiante de Ingeniería Industrial<br>Full Stack Developer Jr</p>
     </div>
-    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+    <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7" id="acerca">
         <span>
             <h1>Acerca de mí</h1>
             <p>
