--- a/ProyectoFinalArgProg/src/app/components/educacion/educacion.component.css
+++ b/ProyectoFinalArgProg/src/app/components/educacion/educacion.component.css
@@ -1,9 +1,34 @@
 .row{
     padding: 20px;
+    border: 2px solid white;
+    background-color: rgb(167, 237, 255);
+    height:1000px;
+    border-radius: 50px 50px 50px 50px;
+    font-family: "arial";
 }
-div{
-    background-color: rgb(99, 203, 230);
+
+.title{
+    border: 2px solid white;
+    border-radius: 50px 50px 50px 50px;
+    background-color: azure;
+    text-align:center;
+    height: 55px;
+    display: flex;
+    font-weight: bold;
+    height: 70px;
+    align-items: center;
+    justify-content: center;
+    
 }
-h1, h3{
-    display: inline;
+#ed1, #ed2, #ed3{
+    align-items: right;
+    text-align: left;
+    margin-top: 80px;
+    justify-content: center;
+}
+
+#fot1, #fot2, #fot3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
