--- a/ProyectoFinalArgProg/src/app/components/experiencia/experiencia.component.css
+++ b/ProyectoFinalArgProg/src/app/components/experiencia/experiencia.component.css
@@ -1,9 +1,33 @@
 .row{
     padding: 20px;
+    border: 2px solid white;
+    background-color: rgb(167, 237, 255);
+    height:800px;
+    border-radius: 50px 50px 50px 50px;
+    font-family: arial;
 }
-div{
-    background-color: rgb(99, 203, 230);
+.exp1, .exp2{
+    text-align: center;
+    margin-bottom: 50px;
 }
-h1, h3{
-    display: inline;
+
+.exp{
+    border: 2px solid white;
+    border-radius: 50px 50px 50px 50px;
+    text-align: center;
+    background-color: azure;
+    display: flex;
+    font-weight: bold;
+    height: 70px;
+    align-items: center;
+    justify-content: center;
+}
+
+#exp1, #exp2{
+    margin-top: 30px;
+    text-align: center;
+}
+img{
+    border-radius: 50px 50px 50px 50px;
+    border: 2px solid white;
 }
