--- a/ProyectoFinalArgProg/src/app/components/hys/hys.component.html
+++ b/ProyectoFinalArgProg/src/app/components/hys/hys.component.html
@@ -1,6 +1,6 @@
 
 <div class="row">
-    <h1> Hard & Soft skills</h1>
+    <div class="hys"><h1> Hard & Soft skills</h1></div>
     <div class="text-center col-sm-4 col-md-4 col-lg-4">
         <circle-progress
             [percent]="70"
@@ -12,7 +12,7 @@
             [showSubtitle]="false"
             [outerStrokeWidth]="10"
             [innerStrokeWidth]="2"
-            [outerStrokeColor]="'rgb(127, 255, 0)'"
+            [outerStrokeColor]="'rgb(0, 204, 255)'"
             [innerStrokeColor]="'white'"
             [animation]="true"
             [animationDuration]="700">
@@ -31,7 +31,7 @@
             [showSubtitle]="false"
             [outerStrokeWidth]="10"
             [innerStrokeWidth]="2"
-            [outerStrokeColor]="'rgb(127, 255, 0)'"
+            [outerStrokeColor]="'rgb(0, 204, 255)'"
             [innerStrokeColor]="'white'"
             [animation]="true"
             [animationDuration]="700">
@@ -50,7 +50,7 @@
             [showSubtitle]="false"
             [outerStrokeWidth]="10"
             [innerStrokeWidth]="2"
-            [outerStrokeColor]="'rgb(127, 255, 0)'"
+            [outerStrokeColor]="'rgb(0, 204, 255)'"
             [innerStrokeColor]="'white'"
             [animation]="true"
             [animationDuration]="700">
@@ -69,7 +69,7 @@
             [showSubtitle]="false"
             [outerStrokeWidth]="10"
             [innerStrokeWidth]="2"
-            [outerStrokeColor]="'rgb(127, 255, 0)'"
+            [outerStrokeColor]="'rgb(0, 204, 255)'"
             [innerStrokeColor]="'white'"
             [animation]="true"
             [animationDuration]="700">
@@ -88,7 +88,7 @@
             [showSubtitle]="false"
             [outerStrokeWidth]="10"
             [innerStrokeWidth]="2"
-            [outerStrokeColor]="'rgb(127, 255, 0)'"
+            [outerStrokeColor]="'rgb(0, 204, 255)'"
             [innerStrokeColor]="'white'"
             [animation]="true"
             [animationDuration]="700">
@@ -107,7 +107,7 @@
             [showSubtitle]="false"
             [outerStrokeWidth]="10"
             [innerStrokeWidth]="2"
-            [outerStrokeColor]="'rgb(127, 255, 0)'"
+            [outerStrokeColor]="'rgb(0, 204, 255)'"
             [innerStrokeColor]="'white'"
             [animation]="true"
             [animationDuration]="700">
