--- a/ProyectoFinalArgProg/src/app/components/logo-ap/logo-ap.component.css
+++ b/ProyectoFinalArgProg/src/app/components/logo-ap/logo-ap.component.css
@@ -24,11 +24,13 @@ a {
     border-width: 2px;
 }
 /*para la vista del celular*/
-.container{
+@media(max-width:575px){
+    .container{
     flex-direction: column;
 }
 .redes{
     display:flex;
-    flex-direction:column;
+    flex-direction:row;
     align-items: center;
+}
 }
