--- a/ProyectoFinalArgProg/src/app/components/proyecto/proyecto.component.html
+++ b/ProyectoFinalArgProg/src/app/components/proyecto/proyecto.component.html
@@ -1,15 +1,13 @@
 <div class="row">
-    <h1>Proyectos realizados</h1>
-    <div class="contenedor">
-        <div class="col-md-7 ">
-            <h1>Aguara Lodge</h1>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    <div class="title"><h1>Proyectos realizados</h1></div>
+    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" id="image"><img src="../../../assets/Captura.PNG"></div>
+    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8" id="texto"><h3>Aguara Lodge</h3><br><p> Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                 Quia neque consequatur nam impedit aliquid recusandae 
                 minima assumenda nulla
                 asperiores blanditiis quis iste, quod exercitationem 
-                delectus repudiandae vitae ullam dolores libero?</p>
-        </div>
-        <div>
-       </div>
-    </div>
-</div>
+                delectus repudiandae vitae ullam dolores libero?</p></div>
+            
+            
+            
+  
+
