--- a/ProyectoFinalArgProg/FrontEnd/src/app/components/experiencia/experiencia.component.css
+++ b/ProyectoFinalArgProg/FrontEnd/src/app/components/experiencia/experiencia.component.css
@@ -2,33 +2,33 @@
     padding: 20px;
     border: 2px solid white;
     background-color: rgb(167, 237, 255);
-    height:1000px;
+    height:800px;
     border-radius: 50px 50px 50px 50px;
-    font-family: "arial";
+    font-family: arial;
+}
+.exp1, .exp2{
+    text-align: center;
+    margin-bottom: 50px;
 }
 
-.title{
+.exp{
     border: 2px solid white;
     border-radius: 50px 50px 50px 50px;
+    text-align: center;
     background-color: azure;
-    text-align:center;
-    height: 55px;
     display: flex;
     font-weight: bold;
     height: 70px;
     align-items: center;
     justify-content: center;
-    
-}
-#ed1, #ed2, #ed3{
-    align-items: right;
-    text-align: left;
-    margin-top: 80px;
-    justify-content: center;
 }
 
-#fot1, #fot2, #fot3{
-    display: flex;
-    align-items: center;
+#exp1, #exp2{
+    margin-top: 30px;
+    text-align: left;
     justify-content: center;
+}
+img{
+    border-radius: 50px 50px 50px 50px;
+    border: 2px solid white;
 }
