--- a/ProyectoFinalArgProg/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoFinalArgProg/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
@@ -1,5 +1,6 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+    
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2" id="containerfoto">
         <img src="../../../assets/fotoperfil.png" class="img-fluid" id="fotodeperfil">
     </div>
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2" id="presentacion">
