--- a/ProyectoFinalArgProg/FrontEnd/src/app/components/experiencia/experiencia.component.html
+++ b/ProyectoFinalArgProg/FrontEnd/src/app/components/experiencia/experiencia.component.html
@@ -4,7 +4,7 @@
 
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4"><img src="../../../assets/aguar.PNG"></div>
 
-        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8" id="exp1"><h3>Atencion al cliente en negocio de pesca</h3><br><p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8" id="exp1"><h3>Atencion al cliente en negocio de pesca</h3><p> Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Distinctio facilis nulla esse molestias eum laborum quod debitis 
                 reiciendis adipisci harum quibusdam recusandae r
                 epellat aspernatur corrupti illo voluptatibus impedit, optio totam.
@@ -15,7 +15,7 @@
             </p>
         </div>
         
-
+        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" id="fot"><img src="../../../assets/Apicultor.jpg" style="height: 200px;"></div>
         <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8" id="exp2"><h3>Apicultor</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Distinctio facilis nulla esse molestias eum laborum quod debitis 
@@ -28,6 +28,6 @@
                 velit qui eius enim quibusdam aperiam eveniet delectus fuga culpa?
             </p>
         </div>
-        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" id="fot"><img src="../../../assets/Apicultor.jpg" style="height: 200px;"></div>
+        
 </div>
 
